<!-- activity_song_details.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Artist Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Song Title"
        android:layout_below="@id/textViewArtistName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Duration"
        android:layout_below="@id/textViewSongTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewAlbumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Album Name"
        android:layout_below="@id/textViewDuration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_below="@id/textViewAlbumName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

</RelativeLayout>